--- a/example/package.json
+++ b/example/package.json
@@ -3,28 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "npm run serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "dev": "npm run serve"
   },
   "dependencies": {
+    "@vue/compat": "^3.2.22",
+    "@vue/compiler-sfc": "^3.2.22",
     "core-js": "^3.6.4",
+    "vue": "^3.2.22",
     "vue-github-button": "^1.1.2",
-    "vue-router": "^3.1.6"
+    "vue-router": "^4.0.12"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.3.0",
-    "@vue/cli-plugin-eslint": "~4.3.0",
-    "@vue/cli-plugin-router": "^4.3.0",
-    "@vue/cli-service": "~4.3.0",
+    "@vue/cli-plugin-babel": "~4.5.15",
+    "@vue/cli-plugin-eslint": "~4.5.15",
+    "@vue/cli-plugin-router": "~4.5.15",
+    "@vue/cli-service": "~4.5.15",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
-    "raw-loader": "^4.0.0",
-    "vue-template-compiler": "^2.6.11"
+    "raw-loader": "^4.0.0"
   },
   "eslintConfig": {
     "root": true,
