--- a/package.json
+++ b/package.json
@@ -32,11 +32,10 @@
     "url": "https://github.com/tangbc/vue-virtual-scroll-list/issues"
   },
   "homepage": "https://github.com/tangbc/vue-virtual-scroll-list#readme",
-  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.8.7",
     "@babel/preset-env": "^7.8.7",
-    "@vue/test-utils": "^1.0.0-beta.33",
+    "@vue/test-utils": "^2.0.0-rc.16",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^25.5.1",
     "eslint": "^6.8.0",
@@ -50,7 +49,7 @@
     "jest": "^25.5.1",
     "rollup": "^2.1.0",
     "rollup-plugin-babel": "^4.4.0",
-    "vue": "^2.6.11",
+    "vue": "^3.2.22",
     "vue-jest": "^3.0.5",
     "vue-template-compiler": "^2.6.11"
   }
